# ocui

./: .gitignore  CHANGELOG.md  README.md  docker-compose.standalone.yml  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-frontend.yml  docker-gateway.yml  release.yml
docker/: Caddyfile.gateway  Dockerfile.backend  Dockerfile.gateway  backend-entrypoint.sh
docker/router/: router.py
scripts/: copy-material-icons.mjs
src/: App.tsx  index.css  main.tsx
src-router/: Cargo.toml
src-router/src/: config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  lib.rs
src/api/: client.ts  events.test.ts  events.ts  file.ts  http.ts  mcp.ts  permission.ts  ptyBridge.ts  session.ts  types.ts
src/components/: BottomPanel.tsx  CodeBlock.test.tsx  CodeBlock.tsx  CodeMirrorReadonly.tsx  CodePreview.test.tsx  CodePreview.tsx  CommandPalette.tsx  ContentBlock.test.tsx  ContentBlock.tsx  DesktopTitlebar.tsx  DiffViewer.test.tsx  DiffViewer.tsx  FileExplorer.tsx  FullscreenViewer.test.tsx  FullscreenViewer.tsx  Icons.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  McpPanel.tsx  MultiFileDiffModal.tsx  OutlineIndex.tsx  PanelContainer.tsx  RightPanel.tsx  SessionChangesPanel.test.tsx  SessionChangesPanel.tsx  Terminal.tsx  ToastContainer.tsx  WorktreePanel.tsx  codeMirrorReadonlyExtensions.ts  imageDimensions.test.ts  imageDimensions.ts  markdownHtmlRenderer.ts  markdownStream.test.ts  markdownStream.ts  mermaidRenderCache.ts
src/constants/: desktopWindow.ts  pagination.ts
src/hooks/: index.ts  (+25 more)
(+142 files in other folders)
