[package]
name = "opencodeui-router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
log = { version = "0.4.29", features = ["release_max_level_info"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
  "fs",
  "macros",
  "net",
  "parking_lot",
  "rt"
] }
